--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-native-msal-client",
-  "version": "0.2.0",
+  "version": "0.2.3",
   "description": "React Native Bindings for the Microsoft MSAL library",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config"
   },
   "keywords": [
     "react-native",
@@ -22,5 +23,32 @@
   "bugs": {
     "url": "https://github.com/bjartebore/react-native-msal-client/issues"
   },
-  "homepage": "https://github.com/bjartebore/react-native-msal-client#readme"
+  "homepage": "https://github.com/bjartebore/react-native-msal-client#readme",
+  "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^4.19.1 || ^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-hooks": "^1.4.0",
+    "flow-bin": "0.86.0",
+    "react": "16.6.3",
+    "react-native": "^0.58.6",
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.4"
+  }
 }
