--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
 	"dependencies": {
 		"react": "16.3.1",
 		"react-native": "0.55.4",
-		"react-native-msal-client": "../"
+		"react-native-msal-client": "file:../src/react-native-msal-client-0.2.0.tgz"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.1",
