--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,5 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/visualstudio
+example/.vscode/.react/index.map
+example/.vscode/.react/index.bundle
