--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -138,9 +138,11 @@ android {
 
 dependencies {
     compile project(':react-native-msal-client')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.react:react-native:+'
+    // From node_modules
+    implementation 'com.microsoft.identity.client:msal:0.1.3'
 }
 
 // Run this once to be able to run the application with BUCK
