--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-msal-client",
-  "version": "0.2.0",
+  "version": "0.2.15",
   "description": "React Native Bindings for the Microsoft MSAL library",
-  "main": "./index.js",
+  "main": "./index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
