added android support

--- a/example/package.json
+++ b/example/package.json
@@ -6,15 +6,15 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.3.1",
-		"react-native": "0.55.4",
+    "react": "16.6.0",
+    "react-native": "^0.57.4",
 		"react-native-msal-client": "../"
 	},
 	"devDependencies": {
-		"babel-jest": "23.0.1",
-		"babel-preset-react-native": "4.0.0",
-		"jest": "23.0.1",
-		"react-test-renderer": "16.3.1"
+		"babel-jest": "23.2.0",
+		"metro-react-native-babel-preset": "^0.45.0",
+		"jest": "23.2.0",
+		"react-test-renderer": "16.6.0"
 	},
 	"jest": {
 		"preset": "react-native"
