--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,28 +1,27 @@
 apply plugin: 'com.android.library'
 
+
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
+
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion safeExtGet('compileSdkVersion', 26)
+    buildToolsVersion safeExtGet('buildToolsVersion', '26.0.3')
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion safeExtGet('minSdkVersion', 16)
+        targetSdkVersion safeExtGet('targetSdkVersion', 26)
         versionCode 1
         versionName "1.0"
     }
 
-    // packagingOptions {
-    //     exclude "META-INF/MSFTSIG.SF"
-    //     exclude "META-INF/MSFTSIG.RSA"
-    // }
 }
 
-// repositories {
-//     mavenCentral()
-// }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.facebook.react:react-native:+'
+    compile "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
     compile 'com.microsoft.identity.client:msal:0.2.+'
 }
