--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-msal-client",
-  "version": "0.3.0",
+  "version": "0.3.0-beta.5",
   "description": "React Native Bindings for the Microsoft MSAL library",
   "main": "./index.js",
   "scripts": {
